# Work_AI

./: .dockerignore  .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260423_0001_initial_schema.py  20260423_0002_task_source_economics.py  20260423_0003_rapidapi_usage_reconciliation.py
apps/api/: main.py
apps/worker/: main.py
docs/: architecture.md  deployment.md  development.md  execution-flow.md  scoring.md  validation.md
infra/compose/: docker-compose.yml
infra/docker/: Dockerfile
scripts/: offline_eval.py
tests/e2e/: test_offline_eval.py
tests/fixtures/tasks/: abstain_generation.json  provider_error.json  success_extraction.json
tests/integration/: test_contract_idempotency.py  test_orchestrator_paths.py
tests/unit/: test_idempotency.py  test_quality_engine.py  test_validators.py
