[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "work-ai"
version = "0.1.0"
description = "Monorepo dla aplikacji API, workera oraz pakietów domenowych."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Work AI Team" }]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.31.0",
  "pydantic>=2.9.0",
  "httpx>=0.28.0",
  "sqlalchemy>=2.0.0",
  "redis>=5.1.0",
  "structlog>=24.4.0",
  "prometheus-client>=0.21.0",
  "celery>=5.4.0",
  "alembic>=1.14.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.12.0",
  "ruff>=0.8.0",
  "black>=24.10.0",
]

[tool.hatch.build.targets.wheel]
packages = [
  "apps",
  "packages",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
